2009-08-04  Sam Steingold  <sds@gnu.org>

	* modules/regexp/Makefile.in, modules/wildcard/Makefile.in: pass
	"-I$(INCLUDES)/.." in CFLAGS to gllib make because these modules
	rely on src/gllib, so we must also include files in the build dir

2009-08-04  Sam Steingold  <sds@gnu.org>

	* init.lisp (*internal-compiled-file-type*): add
	(*compiled-file-types*): init from *internal-compiled-file-type*
	* compiler.lisp (compile-file-pathname-helper): use
	*internal-compiled-file-type* instead of a string literal
	* utils/modprep.lisp (mod-file): use *internal-compiled-file-type*
	and compile-file-pathname to enable (modprep "bar/foo.c" "./")

2009-08-03  Sam Steingold  <sds@gnu.org>

	keep gnulib files with the module which needs them
	* modules/regexp/gllib, modules/wildcard/gllib:
	* modules/regexp/glm4, modules/wildcard/glm4: add
	* Makefile.devel (MAKEFILE_IN): generate
	modules/regexp/gllib/Makefile.in & modules/wildcard/gllib/Makefile.in
	(gnulib-imported): update all gllib and glm4 directories
	* makemake.in: use libgnu.a as generated by the gnulib build
	process instead of individual object files
	* modules/regexp/Makefile.in, modules/wildcard/Makefile.in:
	* modules/regexp/link.sh.in, modules/wildcard/link.sh.in: link
	with libgnu.a

2009-08-01  Sam Steingold  <sds@gnu.org>

	* genclisph.d (emit_typedef_test): avoid a compilation warning

2009-08-03  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/bdb.c (bdb_errno): do not call end_system_call()
	(LOCK-GET, TXN-RECOVER): move bdb_errno out of
	begin_blocking_system_call/end_blocking_system_call

2009-08-02  Vladimir Tzankov  <vtzankov@gmail.com>

	BERKELEY-DB: fix problems with MT
	* /modules/berkeley-db/bdb.c (SYSCALL1, my_fopen): move error reporting
	outside begin_blocking_system_call/end_blocking_system_call
	(BDB::DBE-SET-OPTIONS): fix a gc-safety bug

2009-07-31  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (with_pinned_varobject): add & export